[gd_scene load_steps=2 format=3 uid="uid://7cantcx5dr8e"]

[ext_resource type="Script" path="res://Levels/1. Grand Campaign/Map/Region_Area.gd" id="1_p5ttc"]

[node name="Region_Area" type="Area2D"]
script = ExtResource("1_p5ttc")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
